--- a/projects.html
+++ b/projects.html
@@ -152,8 +152,7 @@
     .page-hero h1 {
       margin: 0 auto 10px;
       max-width: 820px;
-      font-size: clamp(28px, 5vw, 46px);
-      line-height: 1.05;
+      font-size: clamp(28px, 5vw, 46px)
     }
 
     .driver-bar {
@@ -190,11 +189,6 @@
       box-shadow: 0 10px 24px rgba(12, 21, 33, .06), 0 2px 6px rgba(12, 21, 33, .04)
     }
 
-    .card h3 {
-      font-size: clamp(20px, 2.4vw, 28px);
-      margin: 0 0 6px
-    }
-
     .grid {
       display: grid;
       gap: 16px
@@ -217,9 +211,16 @@
       font-size: 12px;
       padding: 6px 10px;
       border-radius: 999px;
-      background: color-mix(in oklab, #cfe9fb 35%, white);
       border: 1px solid var(--ring);
-      font-weight: 700
+      font-weight: 700;
+      background: color-mix(in oklab, #cfe9fb 35%, white);
+      color: #0b2033
+    }
+
+    :root[data-theme="lando"] .tag {
+      background: #2a2a2a;
+      border-color: #3a3a3d;
+      color: #ffe5c2
     }
 
     .linkrow {
@@ -372,25 +373,14 @@
   <script src="assets/js/confetti.js"></script>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-
     const root = document.documentElement;
-    const saved = localStorage.getItem('kc-theme'); if (saved) root.setAttribute('data-theme', saved);
-
+    const saved = localStorage.getItem('kc-theme'); if (saved) { root.setAttribute('data-theme', saved); }
     function setThemeAndConfetti(name) {
       if (name === 'carlos') { root.setAttribute('data-theme', 'carlos'); localStorage.setItem('kc-theme', 'carlos'); startThemedConfetti('carlos'); }
       if (name === 'lando') { root.setAttribute('data-theme', 'lando'); localStorage.setItem('kc-theme', 'lando'); startThemedConfetti('lando'); }
     }
-
-    document.querySelectorAll('.driver-bar button.btn[data-theme]').forEach(b =>
-      b.addEventListener('click', (e) => { e.stopPropagation(); setThemeAndConfetti(b.dataset.theme); })
-    );
-
-    document.getElementById('resetTheme')?.addEventListener('click', (e) => {
-      e.stopPropagation();
-      root.removeAttribute('data-theme');
-      localStorage.removeItem('kc-theme');
-      startEmojiConfetti();
-    });
+    document.querySelectorAll('[data-theme]').forEach(b => b.addEventListener('click', () => setThemeAndConfetti(b.dataset.theme)));
+    document.getElementById('resetTheme')?.addEventListener('click', () => { root.removeAttribute('data-theme'); localStorage.removeItem('kc-theme'); startEmojiConfetti(); });
   </script>
 </body>
 
