--- a/about.html
+++ b/about.html
@@ -5,8 +5,10 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>About — Katherine Isabela Hsiung Chen</title>
+
   <link rel="icon" type="image/svg+xml"
     href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3EKC%3C/text%3E%3C/svg%3E">
+
   <link
     href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700&family=Inter:wght@400;600;700&display=swap"
     rel="stylesheet">
@@ -96,11 +98,13 @@
       margin-left: 14px;
       color: var(--text);
       font-weight: 700;
-      text-decoration: none
+      text-decoration: none;
+      padding: 6px 10px;
+      border-radius: 10px
     }
 
     .nav a:hover {
-      color: var(--accent)
+      background: color-mix(in oklab, var(--accent) 16%, #fff)
     }
 
     .avatar {
@@ -179,6 +183,17 @@
       border-color: transparent
     }
 
+    .grid {
+      display: grid;
+      gap: 16px
+    }
+
+    @media (min-width:860px) {
+      .grid {
+        grid-template-columns: 1fr 1fr
+      }
+    }
+
     .card {
       background: var(--surface);
       border: 1px solid var(--ring);
@@ -187,19 +202,8 @@
       box-shadow: 0 10px 24px rgba(12, 21, 33, .06)
     }
 
-    .grid {
-      display: grid;
-      gap: 16px
-    }
-
-    @media(min-width:860px) {
-      .grid {
-        grid-template-columns: 1fr 1fr
-      }
-    }
-
     .race-wrap {
-      margin: 4px auto 18px;
+      margin: 6px auto 20px;
       width: min(760px, 92%)
     }
 
@@ -209,21 +213,7 @@
       margin: 10px auto 0;
       width: 100%;
       border-bottom: 3px dashed color-mix(in oklab, var(--text) 35%, transparent);
-      overflow: hidden;
-      --progW: 0%
-    }
-
-    .race-line::after {
-      content: "";
-      position: absolute;
-      right: 0;
-      bottom: -1.5px;
-      height: 3px;
-      width: var(--progW);
-      background: var(--accent);
-      border-radius: 2px;
-      pointer-events: none;
-      z-index: 1
+      overflow: hidden
     }
 
     .race-flag {
@@ -241,8 +231,8 @@
       line-height: 1;
       right: -40px;
       left: auto;
-      transform: scaleX(-1);
-      animation: car-move 7.2s ease-in-out infinite
+      transform: scaleX(-1) !important;
+      animation: car-move 8.8s cubic-bezier(.22, .7, .18, 1) infinite
     }
 
     @keyframes car-move {
@@ -250,8 +240,53 @@
         right: -40px
       }
 
+      15% {
+        right: 12%
+      }
+
+      40% {
+        right: 44%
+      }
+
+      70% {
+        right: 82%
+      }
+
       100% {
         right: calc(100% - 24px)
+      }
+    }
+
+    .race-progress {
+      position: absolute;
+      bottom: -3px;
+      right: 0;
+      height: 6px;
+      width: 0%;
+      background: color-mix(in oklab, var(--accent) 50%, #243);
+      border-radius: 4px;
+      animation: prog-move 8.8s cubic-bezier(.22, .7, .18, 1) infinite;
+    }
+
+    @keyframes prog-move {
+      0% {
+        width: 0%
+      }
+
+      15% {
+        width: 12%
+      }
+
+      40% {
+        width: 44%
+      }
+
+      70% {
+        width: 82%
+      }
+
+      100% {
+        width: 100%
       }
     }
 
@@ -288,8 +323,9 @@
 
     <div class="race-wrap">
       <div class="race-line">
-        <span class="race-car">🏎️</span>
         <span class="race-flag">🏁</span>
+        <span class="race-car">🏎️</span>
+        <div class="race-progress"></div>
       </div>
     </div>
 
@@ -333,9 +369,8 @@
   <script src="assets/js/confetti.js"></script>
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
-
     const root = document.documentElement;
-    const saved = localStorage.getItem('kc-theme'); if (saved) { root.setAttribute('data-theme', saved); }
+    const saved = localStorage.getItem('kc-theme'); if (saved) root.setAttribute('data-theme', saved);
 
     function setThemeAndConfetti(name) {
       if (name === 'carlos') { root.setAttribute('data-theme', 'carlos'); localStorage.setItem('kc-theme', 'carlos'); startThemedConfetti('carlos'); }
@@ -343,34 +378,6 @@
     }
     document.querySelectorAll('button[data-theme]').forEach(b => b.addEventListener('click', () => setThemeAndConfetti(b.dataset.theme)));
     document.getElementById('resetTheme').addEventListener('click', () => { root.removeAttribute('data-theme'); localStorage.removeItem('kc-theme'); startEmojiConfetti(); });
-
-    (function () {
-      const line = document.querySelector('.race-line');
-      const car = document.querySelector('.race-car');
-      if (!line || !car) return;
-
-      let raf;
-      function tick() {
-        const lr = line.getBoundingClientRect();
-        const cr = car.getBoundingClientRect();
-
-        const startRight = lr.right;              
-        const endRight = lr.left + 24;          
-        const current = cr.right;              
-
-        const total = startRight - endRight;
-        const traveled = Math.min(Math.max(startRight - current, 0), total);
-        const pct = (traveled / total) * 100;
-
-        line.style.setProperty('--progW', pct.toFixed(2) + '%');
-
-        if (pct > 98) line.style.setProperty('--progW', '0%');
-
-        raf = requestAnimationFrame(tick);
-      }
-      raf = requestAnimationFrame(tick);
-      addEventListener('visibilitychange', () => { if (document.hidden) { cancelAnimationFrame(raf); } else { raf = requestAnimationFrame(tick); } });
-    })();
   </script>
 </body>
 
