--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Katherine Isabela Hsiung Chen — Pole Position 🏁</title>
-
+  
   <link rel="icon" type="image/svg+xml"
     href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 64 64'%3E%3Crect fill='%23ffffff' x='0' y='0' width='64' height='64' rx='12'/%3E%3Ctext x='50%25' y='50%25' dominant-baseline='middle' text-anchor='middle' font-family='Georgia, serif' font-size='36' font-weight='700' fill='%230d347e'%3EKC%3C/text%3E%3C/svg%3E">
 
@@ -106,21 +106,8 @@
       position: relative;
     }
 
-    .nav a::after {
-      content: "";
-      position: absolute;
-      left: 10px;
-      right: 10px;
-      bottom: 4px;
-      height: 2px;
-      background: color-mix(in oklab, var(--accent) 35%, transparent);
-      opacity: .0;
-      transition: opacity .2s ease;
-      border-radius: 2px
-    }
-
-    .nav a:hover::after {
-      opacity: 1
+    .nav a:hover {
+      background: color-mix(in oklab, var(--accent) 16%, #fff)
     }
 
     .avatar {
@@ -197,14 +184,14 @@
       transition: transform .08s ease
     }
 
-    .btn:active {
-      transform: translateY(1px)
-    }
-
     .btn:hover {
       background: var(--accent);
       color: #fff;
       border-color: transparent
+    }
+
+    .btn:active {
+      transform: translateY(1px)
     }
 
     .hub {
@@ -216,69 +203,48 @@
     }
 
     .cta {
-      --cut: 16px;
+      --glow: color-mix(in oklab, var(--accent) 55%, transparent);
       appearance: none;
-      cursor: pointer;
-      font-weight: 800;
-      letter-spacing: .2px;
-      color: var(--text);
-      background:
-        linear-gradient(180deg,
-          color-mix(in oklab, var(--surface, #fff) 96%, transparent),
-          color-mix(in oklab, var(--surface, #fff) 88%, transparent));
-      border: 1px solid color-mix(in oklab, var(--accent) 30%, var(--ring));
-      padding: 14px 24px;
-      font-size: 17px;
-      clip-path: polygon(0% 0%, calc(100% - var(--cut)) 0%, 100% 50%, calc(100% - var(--cut)) 100%, 0% 100%, var(--cut) 50%);
-      position: relative;
-      overflow: hidden;
-      transition: transform .12s ease, box-shadow .2s ease, border-color .2s ease;
-      box-shadow: 0 12px 28px rgba(12, 21, 33, .10), inset 0 0 0 1px color-mix(in oklab, var(--accent) 18%, #fff);
       text-decoration: none;
       display: inline-block;
-    }
-
-    .cta::before {
-      content: "";
-      position: absolute;
-      inset: -2px;
-      pointer-events: none;
-      background:
-        linear-gradient(120deg, transparent 0 40%,
-          color-mix(in oklab, var(--accent) 22%, transparent) 50%,
-          transparent 60% 100%);
-      opacity: 0;
-      transition: opacity .25s ease;
+      cursor: pointer;
+      color: var(--text);
+      font-weight: 800;
+      letter-spacing: .2px;
+      font-size: 17px;
+      padding: 14px 26px;
+      border-radius: 18px;
+      background: linear-gradient(180deg, color-mix(in oklab, var(--surface, #fff) 96%, transparent), color-mix(in oklab, var(--surface, #fff) 88%, transparent));
+      border: 1px solid color-mix(in oklab, var(--accent) 30%, var(--ring));
+      position: relative;
+      transition: transform .12s ease, box-shadow .2s ease, border-color .2s ease;
+      box-shadow: 0 12px 28px rgba(12, 21, 33, .10), 0 0 0 3px color-mix(in oklab, var(--accent) 12%, transparent) inset;
+      clip-path: polygon(10px 0%, calc(100% - 10px) 0%, 100% 10px, 100% calc(100% - 10px), calc(100% - 10px) 100%, 10px 100%, 0% calc(100% - 10px), 0% 10px);
     }
 
     .cta::after {
-      content: "➤";
+      content: "";
       position: absolute;
-      right: 12px;
-      top: 50%;
-      transform: translateY(-50%);
-      font-size: 14px;
-      opacity: .45;
-      transition: transform .15s ease, opacity .15s ease;
+      inset: -2px;
+      border-radius: 20px;
+      background: radial-gradient(40% 60% at 50% -20%, var(--glow), transparent);
+      opacity: .0;
+      transition: opacity .25s ease;
+      pointer-events: none;
     }
 
     .cta:hover {
       transform: translateY(-2px);
-      box-shadow: 0 16px 36px rgba(12, 21, 33, .16);
-    }
-
-    .cta:hover::before {
-      opacity: 1
+      box-shadow: 0 16px 36px rgba(12, 21, 33, .16), 0 0 0 3px color-mix(in oklab, var(--accent) 22%, transparent) inset;
     }
 
     .cta:hover::after {
-      transform: translate(2px, -50%);
-      opacity: .8
+      opacity: .9
     }
 
     :root[data-theme="lando"] .cta {
       color: #ffeede;
-      border-color: #3a3a3d;
+      border-color: #3a3a3d
     }
 
     .sequence-overlay {
@@ -287,8 +253,8 @@
       display: none;
       align-items: center;
       justify-content: center;
-      background: rgba(0, 0, 0, .58);
-      backdrop-filter: blur(10px) saturate(0.9);
+      background: rgba(0, 0, 0, .62);
+      backdrop-filter: blur(12px) saturate(.9);
       z-index: 50;
     }
 
@@ -301,32 +267,27 @@
     .sequence-card {
       background: color-mix(in oklab, var(--surface, #fff) 96%, transparent);
       border: 1px solid color-mix(in oklab, var(--accent) 32%, var(--ring));
-      border-radius: 20px;
-      padding: 20px 24px;
+      border-radius: 22px;
+      padding: 18px 22px 22px;
       box-shadow: 0 22px 48px rgba(12, 21, 33, .32);
-    }
-
-    .seq-title {
-      margin-top: 10px;
-      font: 700 clamp(16px, 2.6vw, 22px)/1.25 "Playfair Display", Georgia, serif;
-      color: var(--text);
-      text-align: center;
-      text-shadow: 0 2px 10px rgba(0, 0, 0, .15);
+      min-width: min(720px, 92vw);
     }
 
     .start-lights {
       display: flex;
-      gap: 14px;
+      gap: 10px;
       background: color-mix(in oklab, var(--bg) 86%, #fff);
-      padding: 14px 18px;
-      border-radius: 999px;
+      padding: 10px 14px;
+      border-radius: 32px;
       border: 1px solid var(--ring);
       box-shadow: 0 8px 24px rgba(12, 21, 33, .18) inset;
+      width: fit-content;
+      margin: 0 auto;
     }
 
     .light {
-      width: 28px;
-      height: 28px;
+      width: 26px;
+      height: 26px;
       border-radius: 50%;
       background: #2b2b2b;
       border: 1px solid rgba(0, 0, 0, .22)
@@ -340,6 +301,14 @@
       background: #14b314
     }
 
+    .seq-title {
+      margin: 12px 0 6px;
+      font: 700 clamp(16px, 2.6vw, 22px)/1.25 "Playfair Display", Georgia, serif;
+      color: var(--text);
+      text-align: center;
+      text-shadow: 0 2px 10px rgba(0, 0, 0, .15);
+    }
+
     .flag-badge {
       display: flex;
       align-items: center;
@@ -348,8 +317,8 @@
     }
 
     .flag-svg {
-      width: 72px;
-      height: 46px;
+      width: 66px;
+      height: 42px;
       display: none
     }
 
@@ -474,7 +443,6 @@
     </div>
   </footer>
 
-  
   <div class="sequence-overlay" id="seqOverlay">
     <div class="sequence">
       <div class="sequence-card">
@@ -508,7 +476,6 @@
   <script>
     document.getElementById('year').textContent = new Date().getFullYear();
 
-    
     const root = document.documentElement;
     const saved = localStorage.getItem('kc-theme'); if (saved) root.setAttribute('data-theme', saved);
 
@@ -542,9 +509,9 @@
             flagSVG.classList.remove('flag-wave'); void flagSVG.offsetWidth; flagSVG.classList.add('flag-wave');
             startNormalConfetti();
             setTimeout(() => { lights.forEach(l => l.classList.remove('on', 'green')); overlay.style.display = 'none'; }, 1200);
-          }, 500);
+          }, 480);
         }
-      }, 280);
+      }, 260);
     }
     document.getElementById('flagGo').addEventListener('click', runSequence);
   </script>
